--- a/基础知识/数学/基本代数.md
+++ b/基础知识/数学/基本代数.md
@@ -6,5 +6,5 @@
 - 它允许探究数量之间的数学关系的可能
 这三个是初等代数的主要组成部分，以区隔其与目的为教导大学生更高深主题的抽象代数的不同。
 
-在初等代数里，表示式包含有数字、变量及运算。它们通常把较高次项（习惯上）写在表示左边.
+在初等代数里，表示式包含有数字、变量及运算。它们通常把较高次项（习惯上）写在表示左边。一个等式表示其等号两边的表示式是相等的，某些等式对于其中变量的所有取值都成立（a + b = b + a）；这种等式称为恒等式。而其他只有变量在某些值时才正确（如 x^{2}-1=4 ），此一使等式成立的变量值则称为这等式的解。
 
