--- a/考驾照/科目一.md
+++ b/考驾照/科目一.md
@@ -35,7 +35,7 @@
 3. 造成轻微伤/财产损失事故后逃逸
 4. 违反交通信号灯
 5. 运载危险品等未按指定时间、路线、速度行驶或者未悬挂警示标志并采取必要的安全措施的
-6. 校车、客车、旅游客运车超员20%以下
+6. 校车、客车、旅游客运车超员 20%以下
 7. 普通七座以下车超员 50%~100%
 8. 普通七座以上车超员 20%~50%
 9. 普通车普通道路超速 50%以上
@@ -64,6 +64,23 @@
 8. 普通车高速/快速超速 50%以上
 9. 中型客车、校车、危险品运输车高速/快速超速 20%以上
 
-## 吊销驾照并且罚款200～2000的情况
-- 超过规定时速50%
-- 
+## 吊销驾照并且罚款 200 ～ 2000 的情况
+
+- 超过规定时速 50%
+- 将机动车交个驾驶证被吊销、被暂扣或者没有驾驶证的人
+- 驾驶达报废标准的机动车
+
+## 警告或者罚款200元以下
+- 机动车所有权转让未及时登记的
+- 机动车喷涂、粘贴标识或者贴广告、影响驾驶安全的
+- 机动车改车身颜色、更换发动机、车身或者车架 未及时办理变更登记的
+  
+
+
+
+## 其他处罚相关
+- 驾驶机动车造成交通事故逃逸，不构成犯罪的：罚款200～2000元，拘留15日
+- 驾驶人代理他人接受交通违法行为处罚和记分牟利的：罚款3倍所得牟利，但最高不超过5万元
+- 交通安全教育扣减违法记分中弄虚作假的：撤销扣减记录、恢复相应积分、处1000元以下罚款
+- 组织他人代理实际驾驶人参加审验教育，没有牟利的罚款2万以下；有牟利的罚款3倍，但最高不超过2万
+- 驾驶公共交通工具擅离职守、与他人互殴或者殴打他人，危及公共安全，构成犯罪的：处1年以下有期徒刑、拘役或者管制，并处或单处罚金
