docs(交通规则): 调整扣3分情况的条目顺序并新增条目
将“道路上发生故障后，不按规定使用灯光或者未放置警告标志”添加到扣3分情况中，并调整条目顺序

--- a/考驾照/科目一.md
+++ b/考驾照/科目一.md
@@ -18,15 +18,16 @@
 ## 扣 3 分的情况
 
 1. 不避让/不礼让校车
-2. 高速/城快不按道行驶
-3. 不按规定超车
-4. 不按规定安装号牌
-5. 开车打电话
-6. 高速路车速低于最低限速
-7. 发生事故不按规定使用灯光或未放置警告标志
-8. 驾驶普通 7 坐以下的车超员 20%~50%
-9. 驾驶普通车普通道路超速 20%~50%
-10. 驾驶货车超重 30%~50%
+2. 道路上发生故障后，不按规定使用灯光或者未放置警告标志
+3. 高速/城快不按道行驶
+4. 不按规定超车
+5. 不按规定安装号牌
+6. 开车打电话
+7. 高速路车速低于最低限速
+8. 发生事故不按规定使用灯光或未放置警告标志
+9. 驾驶普通 7 坐以下的车超员 20%~50%
+10. 驾驶普通车普通道路超速 20%~50%
+11. 驾驶货车超重 30%~50%
 
 ## 扣 6 分的情况
 
